--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ title: 苏同的博客
 subtitle: 有健康叫资产，没健康叫遗产
 description: 一个腹有节操的码农
 author: 苏同
-language:
-timezone:
+language: zh-CN
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://sutong.github.io/
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :category/:title/
 permalink_defaults:
 
 # Directory
@@ -44,7 +44,7 @@ highlight:
   tab_replace:
 
 # Category & Tag
-default_category: uncategorized
+default_category: 未分类
 category_map:
 tag_map:
 
